--- a/css/styles.css
+++ b/css/styles.css
@@ -158,11 +158,16 @@ footer p {
 }
 
 .signin {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   max-width: 330px;
   padding: 15px;
-  margin: auto;
+  margin:auto;
+  margin-top: 200px;
+  margin-bottom: 285px;
 }
+
 
 #spinner-wrapper {
   position: fixed;
@@ -193,14 +198,37 @@ a.custom-card:hover {
   color: #80888f;
 }
 
-input{
-  width: 300px;
+#e{
+  color: orange;
 }
- 
- #logout{
+
+label{
+  color: white;
+}
+#logout{
   margin-left: 50px;
  }
 
 #usuario{
   color: white;
  } 
+
+
+#form input{
+  opacity: 0.3;
+  width: 300px;
+  border: solid 1px black;
+  border-radius: 8px;
+ }
+
+ #formulario{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ }
+ 
+ #enviar {
+  max-width: 100px;
+ }
+ 
