--- a/css/styles.css
+++ b/css/styles.css
@@ -267,10 +267,9 @@ body.dark-mode {
   color: white;
 }
 
-body.dark-mode .comment-card ,.dark-mode .card,.dark-mode .form-control,.dark-mode .articles, .dark-mode .list-group-item{
+body.dark-mode .comment-card ,.dark-mode .card,.dark-mode .articles, .dark-mode .list-group-item{
   background-color: #2c2c2c; 
   color: #f1f1f1;     
-  
 }
 
 
@@ -284,4 +283,31 @@ body.dark-mode .comment-card ,.dark-mode .card,.dark-mode .form-control,.dark-mo
 
 #totales{
   margin-top: auto;
+}
+
+#precio{
+  color: black;
+}
+
+.dark-mode .btn-light {
+  background-color: rgba(50, 50, 50, 0.8);
+  color: white !important;
+ 
+}
+
+.dark-mode .btn-check:checked + .btn-light {
+  background-color: rgba(60, 60, 60, 0.9);
+  color: white;
+  border-color: rgba(100, 100, 100, 0.6);
+}
+
+.comentarios, #form-calificacion {
+  background-color: rgba(255, 255, 255, 0.3) !important;
+  border-radius: 15px;
+  padding: 10px;
+  color: black !important;
+}
+
+#info-producto{
+  color: black;
 }
