--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,11 @@
   font-family: 'Verdana', serif !important;
 }
 
+/* body, h1, h2, h3, h4, h5, h6, p, span, a, div, li {
+    font-family: 'Roboto Slab', serif !important;
+    font-weight: 550;
+} */
+
 .jumbotron .display-4 {
   font-weight: bold;
 }
@@ -272,8 +277,6 @@ body.dark-mode .comment-card ,.dark-mode .card,.dark-mode .articles, .dark-mode 
   color: #f1f1f1;     
 }
 
-
-
 .imagen-cuadrada {
   width: 400px;       
   height: 400px;
@@ -310,4 +313,204 @@ body.dark-mode .comment-card ,.dark-mode .card,.dark-mode .articles, .dark-mode 
 
 #info-producto{
   color: black;
+}
+
+.add-to-cart {
+            --background-default: #17171B;
+            --background-hover: #0A0A0C;
+            --background-scale: 1;
+            --text-color: #fff;
+            --text-o: 1;
+            --text-x: 12px;
+            --cart: #fff;
+            --cart-x: -48px;
+            --cart-y: 0px;
+            --cart-rotate: 0deg;
+            --cart-scale: .75;
+            --cart-clip: 0px;
+            --cart-clip-x: 0px;
+            --cart-tick-offset: 10px;
+            --cart-tick-color: #00fffc;
+            --shirt-y: -16px;
+            --shirt-scale: 0;
+            --shirt-color: #17171B;
+            --shirt-logo: #fff;
+            --shirt-second-y: 24px;
+            --shirt-second-color: #fff;
+            --shirt-second-logo: #17171B;
+            -webkit-tap-highlight-color: transparent;
+            -webkit-appearance: none;
+            outline: none;
+            background: none;
+            border: none;
+            padding: 12px 0;
+            width: 200px;
+            margin: 0;
+            cursor: pointer;
+            position: relative;
+            font-family: inherit;
+            --cart-x: -75px;
+        }
+
+        .add-to-cart:before {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            border-radius: 5px;
+            transition: background 0.25s;
+            background: var(--background,
+                    var(--background-default));
+            transform: scaleX(var(--background-scale)) translateZ(0);
+        }
+
+        .add-to-cart:not(.active):hover {
+            --background: var(--background-hover);
+        }
+
+        .add-to-cart span {
+            display: block;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+            font-size: 14px;
+            font-weight: 600;
+            line-height: 24px;
+            color: var(--text-color);
+            opacity: var(--text-o);
+            transform: translateX(var(--text-x)) translateZ(0);
+        }
+
+        .add-to-cart svg {
+            display: block;
+            width: var(--svg-width, 24px);
+            height: var(--svg-height, 24px);
+            position: var(--svg-position, relative);
+            left: var(--svg-left, 0);
+            top: var(--svg-top, 0);
+            stroke-linecap: round;
+            stroke-linejoin: round;
+        }
+
+        .add-to-cart svg path {
+            fill: var(--svg-fill, none);
+            stroke: var(--svg-stroke, none);
+            stroke-width: var(--svg-stroke-width, 2);
+        }
+
+        .add-to-cart .morph {
+            --svg-width: 64px;
+            --svg-height: 13px;
+            --svg-left: 50%;
+            --svg-top: -12px;
+            --svg-position: absolute;
+            --svg-fill: var(--background, var(--background-default));
+            transition: fill 0.25s;
+            pointer-events: none;
+            margin-left: -32px;
+        }
+
+        .add-to-cart .shirt,
+        .add-to-cart .cart {
+            pointer-events: none;
+            position: absolute;
+            left: 50%;
+        }
+
+        .add-to-cart .shirt img {
+            transform: translate(-50%, var(--shirt-y)) scale(var(--shirt-scale));
+            position: absolute;
+            left: 50%;
+            top: -45px;
+}
+
+        .add-to-cart .shirt svg {
+            --svg-fill: var(--shirt-color);
+        }
+
+        .add-to-cart .shirt svg g {
+            --svg-fill: var(--svg-g-fill, var(--shirt-logo));
+        }
+
+        .add-to-cart .shirt svg.second {
+            --svg-fill: var(--shirt-second-color);
+            --svg-g-fill: var(--shirt-second-logo);
+            --svg-position: absolute;
+            -webkit-clip-path: polygon(0 var(--shirt-second-y), 24px var(--shirt-second-y), 24px 24px, 0 24px);
+            clip-path: polygon(0 var(--shirt-second-y), 24px var(--shirt-second-y), 24px 24px, 0 24px);
+        }
+
+        .add-to-cart .cart {
+            --svg-width: 36px;
+            --svg-height: 26px;
+            --svg-stroke: var(--cart);
+            top: 10px;
+            margin-left: -18px;
+            transform: translate(var(--cart-x), var(--cart-y)) rotate(var(--cart-rotate)) scale(var(--cart-scale)) translateZ(0);
+        }
+
+        .add-to-cart .cart:before {
+            content: "";
+            display: block;
+            width: 22px;
+            height: 12px;
+            position: absolute;
+            left: 7px;
+            top: 7px;
+            background: var(--cart);
+            -webkit-clip-path: polygon(0 0, 22px 0, calc(22px - var(--cart-clip-x)) var(--cart-clip), var(--cart-clip-x) var(--cart-clip));
+            clip-path: polygon(0 0, 22px 0, calc(22px - var(--cart-clip-x)) var(--cart-clip), var(--cart-clip-x) var(--cart-clip));
+        }
+
+        .add-to-cart .cart path.wheel {
+            --svg-stroke-width: 1.5;
+        }
+
+        .add-to-cart .cart path.tick {
+            --svg-stroke: var(--cart-tick-color);
+            stroke-dasharray: 10px;
+            stroke-dashoffset: var(--cart-tick-offset);
+        }
+
+
+        .dark {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+
+        .dark .add-to-cart {
+            --background-default: #fff;
+            --background-hover: #F2F2F9;
+            --text-color: #17171B;
+            --cart: #17171B;
+            --cart-tick-color: #00fffc;
+            --shirt-color: #fff;
+            --shirt-logo: #17171B;
+            --shirt-second-color: #17171B;
+            --shirt-second-logo: #fff;
+        }
+
+.comprar-btn {
+    background-color: #17171B; 
+    color: #fff;               
+    width: 160px;  
+    height: 48px;            
+    padding: 12px 12px;        
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 14px;
+    text-align: center;
+    
+}
+
+.comprar-btn:hover {
+    background-color: #0A0A0C; 
 }
